--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"gulp-webp-html": "^1.0.2",
 		"jquery": "^3.6.1",
 		"mixitup": "^3.3.1",
+		"normalize.css": "^8.0.1",
 		"sass": "^1.54.9",
 		"slick-carousel": "^1.8.1"
 	}
